version 0.4.6
--------------------------------------------------
* Fix complex `truediv` and `floordiv` methods (issue #53).
* Fix complex binary, hexadecimal and base representation for arrays (issue #56).
* Tests updates for complex representations.

version 0.4.5
--------------------------------------------------
* Fix FutureWarning in subdtype 'str' comparison (issue #45).
* dtype argument added to `resize` method.
* new method `get_dtype` to get dtype using argument `notation`.
* Docstring of `get_dtype`, `resize`, `reshape`, `flatten`, `set_val`, `astype`, `get_val`, `raw`, `uraw`, `equal`
* Order parameter for `reshape` and flatten methods.

version 0.4.4
--------------------------------------------------
* Fix wrapping and scaling issue #44.

version 0.4.3
--------------------------------------------------
* Fxp adds `config` as optional init parameter (kwarg).
* Functions (operators) over one and two variables copy first operator configuration by default.
* Changes above fixed wrap overflowing bug after operation (issue #42 solved).
* Wrap function of utils fix bug when data has more than n_word_max (64 bits in the most of cases) (issue #41 soved).
* Config new methods: copy, deepcopy.
* Fix warning about internal complex check (issue #39).
* Add link implementation between `functions.truediv` with `numpy.divide`.
* Add `axes` parameter to `transpose` method.

version 0.4.2
--------------------------------------------------
* Add template to Config object.
* Fix config update from Fxp's template.

version 0.4.1
--------------------------------------------------
* Test Numpy precision at init.
* Independent definition of n_word_max and error for config.
* Fix astype casting when dtype and vdtype is None.
* Fix casting to object in extended cumprod function.
* Independent definition of n_word_max and error for config.
* Fix astype casting when dtype and vdtype is None.
* Fix casting to object in extended cumprod function.